2019-1/221/users/4168/executions/1666_2973.log
== TEST (2019-04-16 09:37:43) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100
s = s0 + (v*t)
if (s<=100):
   print("OK")
else: 
	print("ACIMA")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    s = s0 + (v*t)
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:39:39) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (s<=100):
   s = so + (v*t)
	mensagem = "OK"
else: 
	mensagem = "ACIMA"
	
print(mensagem)
-- ERROR:
File "XXXX", line 8
    mensagem = "OK"
                  ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:40:50) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (s<=100):
   s = so + (v*t)
	print()
else: 
	print()
-- ERROR:
File "XXXX", line 8
    print()
          ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:41:07) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (s<=100):
   s = so + (v*t)
	print(s)
else: 
	print(s)
-- ERROR:
File "XXXX", line 8
    print(s)
           ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:42:26) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (s<=100):
	s = so + (v*t)
	print(s)
else: 
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (s<=100):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:43:58) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (s<=100):
	s = so + (v*t)
	print(s)
else: 
	s = so + (v*t)
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (s<=100):
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:45:00) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	print(s)
else: 
	s = so + (v*t)
	print(s)
-- OUTPUT:
7202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:45:14) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	print(s)
else: 
	s = so + (v*t)
	print(s)
-- EXECUTION TIME:
0.223099
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:46:04) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(s)
-- OUTPUT:
7202
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:46:15) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(s)
-- EXECUTION TIME:
0.118876
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:46:44) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(mensagem)
	print(s)
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:46:55) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(mensagem)
	print(s)
-- EXECUTION TIME:
0.160582
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
7203
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:47:03) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(mensagem)
	print(s)
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:47:35) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem.lower)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(mensagem.lower)
	print(s)
-- EXECUTION TIME:
0.237215
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
<built-in method lower of str object at 0x7f3100bf8ae8>
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
<built-in method lower of str object at 0x7f33c5e2fae8>
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
<built-in method lower of str object at 0x7fc872e18b20>
7203
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:47:37) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem.lower)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(mensagem.lower)
	print(s)
-- OUTPUT:
7202
<built-in method lower of str object at 0x7f5e3e20d5e0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:48:05) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem.upper)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(mensagem.upper)
	print(s)
-- OUTPUT:
7202
<built-in method upper of str object at 0x7fdfd3cfb5e0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:48:37) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(mensagem)
	print(s)
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:49:03) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(s)
	print(mensagem)
-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:49:12) 
-- CODE:
so = int(input(" posicao inicial do objeto:"))
v = int(input("velocidade do objeto:"))
t = int(input("tempo de deslocamento:"))
lim = 100

if (v<=100):
	s = so + (v*t)
	mensagem = "OK"
	print(s)
	print(mensagem)
else: 
	s = so + (v*t)
	mensagem = "ACIMA"
	print(s)
	print(mensagem)
-- EXECUTION TIME:
0.126981
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
